<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:layout_marginStart="30dp"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/shape_submit"
                    android:minHeight="6dp"
                    android:text="@string/btn_submit"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/colorWhite"
            app:tabIndicatorHeight="10dp"
            app:tabSelectedTextColor="@color/colorWhite"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabLearningLeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_learnig_leaders" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabSkillLeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_skilliq_leaders" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>